--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,14 @@ div.clear {
 	margin-top: 20px;
 	float: right;
 }
+.menulist {
+	text-align: center;
+}
+.menulistbordered {
+	border: 1px solid #e3e3e3;
+	border-width: 0 1px 0 0;
+}
+.brokeLine {
+	margin: 0 20%;
+	border-color: #f2f2f2;
+}
